fix broken layout

--- a/app/src/assets/css/base.scss
+++ b/app/src/assets/css/base.scss
@@ -18,8 +18,9 @@ $grey-light: $light-gray;
 $primary: $dark-green;
 $link: $light-blue;
 
-$widescreen-enabled: false;
-$fullhd-enabled: false;
+$tablet-enabled: true;
+$widescreen-enabled: true;
+$fullhd-enabled: true;
 
 $family-primary: Merriweather Sans, Lato, Cantarell, sans-serif;
 
@@ -196,7 +197,7 @@ header {
 
 footer {
   width: 100%;
-  height: 260px;
+  height: 100px;
   font-size: 16px;
   color: $light-beige;
   z-index: 6;
@@ -315,13 +316,15 @@ nav ul li.active a::after {
 
 
 main {
-  height: height;
+  height: auto;
   padding: 0 10px 60px 10px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
   box-sizing: border-box;
+  margin-bottom: 60px;
+  margin-top: 10px;
 }
 
 content {
@@ -330,11 +333,14 @@ content {
   padding: 10px;
   border-radius: 5px;
   flex-shrink: 1;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   box-sizing: border-box;
+  margin-top: 10px;
+  .column {
+    margin-top: 10px;
+  }
 }
 
 aside {
